# CSES-Solver-CLI

./: README.md  missing_number.py  pyproject.toml
.copilot-tracking/research/2026-04-04/: cses-cli-research.md
.copilot-tracking/research/subagents/2026-04-04/: cses-problem-set-research.md  input-simulation-research.md  storage-and-generation-research.md  tui-framework-research.md
.temp/: requirements.md  research-and-plan.md  return-value-mode-plan.md
data/: cses.db-journal
generators/: generate_all.py  input_generators.py
generators/reference_solutions/: advanced_graph.py  advanced_techniques.py  bitwise_operations.py  counting.py  dynamic_programming.py  graph_algorithms.py  interactive.py  introductory.py  range_queries.py  sliding_window.py  sorting_searching.py  tree_algorithms.py
src/cses_cli/: __init__.py  cli.py  config.py  db.py  harness.py  judge.py  models.py  problems_data.py  runner.py  seed.py  utils.py
src/cses_cli/tui/: dashboard.py  test_explorer.py
