[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cses-cli"
version = "0.1.0"
description = "A CLI/TUI tool to run Python solutions against CSES problem set test cases offline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "textual>=0.80",
    "rich>=13.0",
]

[project.scripts]
cses = "cses_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cses_cli"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"data/cses.db" = "cses_cli/data/cses.db"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
